# advent-2025

./: .gitignore  Cargo.toml  LICENSE  README.md
src/day-1/: day-1.md  main.rs
src/day-2/: day-2.md  main.rs
src/day-3/: day-3.md  main.rs
src/lib/: lib.rs
