[package]
name = "advent_2025"
version = "0.1.0"
authors = ["pierreyoda@users.noreply.github.com"]
edition = "2024"

[lib]
name = "advent_2025_common"
path = "src/lib/lib.rs"

[[bin]]
name = "day-1"
path = "src/day-1/main.rs"
[[bin]]
name = "day-2"
path = "src/day-2/main.rs"

[dependencies]
anyhow = "1.0.100"
colored = "3.0.0"
